# qualifinds-challenge

./: .env.example  .gitignore  README.md  SOLUTION.md  SPEC.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  llm.py  security.py
backend/app/domain/: workflow.py
backend/app/integrations/: __init__.py  base.py  mocks.py
backend/app/services/: condition_evaluator.py  executor.py  planner.py  planner_graph.py  planner_state.py  store.py  templates.py
backend/app/services/nodes/: extract_intent.py  fill_parameters.py  select_template.py  validate_steps.py
backend/tests/: test_condition_evaluator.py  test_config.py  test_executor.py  test_health.py  test_imports.py  test_integrations.py  test_llm_factory.py  test_planner_graph.py  test_planner_state.py  test_prototype_flow.py  test_routes.py  test_security.py  test_store.py  test_templates.py  test_workflow_models.py
backend/tests/test_nodes/: test_extract_intent.py  test_fill_parameters.py  test_select_template.py  test_validate_steps.py
docs/: api-contract.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx  styles.css
frontend/lib/: api.ts
